# Markov-Chain

new/: CMakeLists.txt
new/include/Markov_Chain/: io.hpp  markov_chain.hpp  text_creator.hpp
new/resources/: corpus.txt  corpus_anders.txt  corpus_demo.txt  corpus_matt.txt
new/src/: io.cpp  main.cpp  markov_chain.cpp  text_creator.cpp
old/: CMakeLists.txt
resources/: Word Categories.rtf  corpus.txt
src/: main.cpp
